kded: Fix `launchState` setting not working

Before setting the initial state, we need to wait for the manager to
be operational.

`restoreAdapter()` is scheduled to be called after 1 second when
`adapterAdded` is emitted. Thus after applying `launchState` settings,
`saveState` should be called to avoid restoring to an incorrect state.

Signed-off-by: Arctic Lampyrid <ArcticLampyrid@outlook.com>

BUG: 469119
FIXED-IN: 6.0.5


(cherry picked from commit d71bfa54089b388a83473599a4dfce6ff06b4be6)

d145259e fix: `launchState` settings never works